# supl-server

./: Doxyfile  Makefile.am  autogen.sh  configure.ac
doc/: MAP.txt  SUPL-2.0.3.txt  design  lpp-14.4.0.txt  rrc-7.4.0.txt  rrlp-14.3.0.txt
m4/: ax_prog_doxygen.m4
src/: macros.hpp  supl-server.hpp  utils.hpp
src/asn1c/: codec.cpp  codec.hpp
src/asn1c/module/lpp-14.4.0/ASN.1/: LPP-PDU-Definitions.asn1
src/asn1c/module/rrc-15.1.0/ASN.1/: Class-definitions.asn1  Constant-definition.asn1  InformationElements.asn1  Internode-definitions.asn1  PDU-definitions.asn1
src/asn1c/module/rrc-7.4.0/ASN.1/: Class-definitions.asn1  Constant-definitions.asn1  InformationElements.asn1  Internode-definitions.asn1  PDU-definitions.asn1
src/asn1c/module/rrlp-14.2.0/ASN.1/: MAP-BS-Code.asn1  MAP-ER-DataTypes.asn1  MAP-GR-DataTypes.asn1  MAP-LCS-DataTypes.asn1  MAP-OM-DataTypes.asn1  MAP-SM-DataTypes.asn1  MAP-SS-Code.asn1  MAP-SS-DataTypes.asn1  MAP-TS-Code.asn1  RRLP-Components.asn1  RRLP-Messages.asn1
src/asn1c/module/rrlp-14.3.0/ASN.1/: MAP-BS-Code.asn1  MAP-CH-DataTypes.asn1  MAP-CommonDataTypes.asn1  MAP-ER-DataTypes.asn1  MAP-ExtensionDataTypes.asn1  MAP-GR-DataTypes.asn1  MAP-LCS-DataTypes.asn1  MAP-MS-DataTypes.asn1  MAP-OM-DataTypes.asn1  MAP-SM-DataTypes.asn1  MAP-SS-Code.asn1  MAP-SS-DataTypes.asn1  MAP-TS-Code.asn1  RRLP-Components.asn1  RRLP-Messages.asn1
src/asn1c/module/supl-2.0.3/ASN.1/: SUPL-AUTH-REQ.asn1  SUPL-AUTH-RESP.asn1  SUPL-END.asn1  SUPL-INIT.asn1  SUPL-NOTIFY-RESPONSE.asn1  SUPL-NOTIFY.asn1  SUPL-POS-INIT.asn1  SUPL-POS.asn1  SUPL-REPORT.asn1  SUPL-RESPONSE.asn1  SUPL-SET-INIT.asn1  SUPL-START.asn1  SUPL-TRIGGERED-RESPONSE.asn1  SUPL-TRIGGERED-START.asn1  SUPL-TRIGGERED-STOP.asn1  ULP-Components.asn1  ULP-Version-2-message-extensions.asn1  ULP-Version-2-parameter-extensions.asn1  ULP.asn1  Ver2-ULP-Components.asn1
src/asn1c/module/supl2/: supl2.asn1
src/asn1c/module/test/: ATag.c  ATag.h  BTag.c  BTag.h  CTag.c  CTag.h  DTag.c  DTag.h  ETag.c  ETag.h  FTag.c  FTag.h  GTag.c  GTag.h  HTag.c  HTag.h  ITag.c  ITag.h  test.asn1
src/asn1c/skeletons/: pdu_collection.c
src/misc/: bytes.cpp  bytes.hpp  memblock.cpp  memblock.hpp  utils.hpp
src/server/: supl-server.cpp  supl-server.hpp
tests/: test1.cpp  test2.cpp
